name:                context
version:             0.2.0
synopsis:            Flexible context type
description:         Please see README.md
homepage:            https://github.com/ralphmorton/context#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Context
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/context
