name:                context
version:             0.2.1
synopsis:            Flexible context type
description:         Flexible context type
homepage:            https://github.com/ralphmorton/context
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Misc
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Context
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/context
